src/tests/32_laze_required_version/EXPECTED_STDERR_PATTERNS
^laze: error: laze-project.yml: laze_required_version: got "99.0.0", expected any version <=
